# yoyok

./: .gitignore  Cargo.toml  README.md
docs/: REFERENCES.md  finalpaper.tex  finalproposal.tex  initialproposal.tex  lastproposal.bib
examples/: arrays.yk  comments.yk  functions.yk  ifelse.yk  refs.yk  simple.yk  simple.yok  types.yk  while.yk
src/: error.rs  log.rs  main.rs
src/ast/: ast.rs  mod.rs  prettyprint.rs  proptest.rs  tree.rs
src/interpreter/: README.md  env.rs  error.rs  mod.rs  run.rs  value.rs
src/parser/: README.md  constants.rs  error.rs  mod.rs  parse.rs  parser.rs  scanner.rs  tokens.rs
src/semantics/: README.md  error.rs  mod.rs  typeinfer.rs  types.rs
