[package]
name = "yoyok"
version = "0.1.0"
edition = "2021"
authors = ["aryansw"]
description = "A rust-like language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
once_cell = "1.17.0"
thiserror = "1.0.38"
