[package]
name = "yoyok"
version = "0.1.0"
edition = "2021"
authors = ["aryansw"]
description = "A rust-like language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
once_cell = "1.17.0"
shrinkwraprs = "0.3.0"
thiserror = "1.0.38"

[dev-dependencies]
proptest = "1.0.0"