[package]
name = "yoyok"
version = "0.1.0"
edition = "2021"
authors = ["aryansw"]
description = "A rust-like language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
once_cell = "1.17.1"
shrinkwraprs = "0.3.0"
thiserror = "1.0.38"
proptest = "1.1.0"
itertools = "0.10.5"

# Running tests in release mode is much faster

[profile.test]
opt-level = 3
overflow-checks = true
lto = false
incremental = true
